--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -33,10 +33,31 @@ a:hover {
 }
 
 #news {
-  width: 70%;
-  float:left;
+  width: 58%;
+  float:right;
 }
 
 #tfl {
+  float: left;
+  width: 25%;
+  margin-left: 10%;
+}
+
+#cinema {
+  margin-left: 10%;
+  width: 25%;
+  float: left;
+  clear: both;
+}
+
+#quote {
+  width: 58%;
   float: right;
+}
+
+@media (max-width: 600px) {
+  #tfl {
+    width: 100%;
+    margin-left: 0%;
+  }
 }
