--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,9 +3,15 @@ h1 {
   font-size: 50px;
 }
 
+body  {
+  background-color: #10123B;
+  color: white;
+  font-family: 'Raleway', sans-serif;
+}
+
 a {
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
 a:hover {
@@ -16,6 +22,7 @@ a:hover {
   width: 100%;
   margin-left: 10%;
   margin-bottom: 2%;
+  background-color: #14A0D3;
 }
 
 #weatherForecast {
@@ -33,31 +40,68 @@ a:hover {
 }
 
 #news {
-  width: 58%;
+  width: 46%;
+  padding: 2%;
   float:right;
+  background-color: #F35143;
+}
+
+#sport {
+  width: 46%;
+  padding: 2%;
+  float:left;
+  background-color: #fdc831;
 }
 
 #tfl {
   float: left;
-  width: 25%;
-  margin-left: 10%;
+  width: 20%;
+  margin-left: 5%;
 }
 
 #cinema {
-  margin-left: 10%;
-  width: 25%;
+  padding: 2%;
+  width: 34%;
   float: left;
-  clear: both;
+  /*clear: both;*/
+  background-color: #D34191;
 }
 
 #quote {
-  width: 58%;
+  width: 33%;
+   padding: 2%;
+   float: right;
+  background-color:#1DBAB1; 
+}
+
+#advice {
+  display: inline-block;
   float: right;
+  width: 33%;
+  padding: 2%;
+  background-color:#15A0D3; 
 }
 
 @media (max-width: 600px) {
   #tfl {
-    width: 100%;
-    margin-left: 0%;
-  }
+  width: 100%;
+  float: none;
+  margin-left: 2%;
+}
+
+ #news {
+  width: 100%;
+  float:none;
+}
+
+#cinema {
+
+  width: 100%;
+  float: none;
+}
+
+#quote {
+  width: 100%;
+  float: none;
+}
 }
